--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "python.pythonPath": "/home/gustavo/anaconda3/bin/python"
 }
